--- a/src/data/levels/05b_PPU/25_Mapper tick/chat/es.yml
+++ b/src/data/levels/05b_PPU/25_Mapper tick/chat/es.yml
@@ -1,4 +1,20 @@
 main:
   messages:
-  - coming soon!
+  - un toque final 🪄
+  - algunos mappers incluyen un <contador de scanlines>
+  - "lo implementaremos tan simplemente como podamos:"
+  - simplemente llama a una función `tick()` en el ciclo 260 de cada pre-line y scanline visible
+  responses:
+  - ¿es tan simple? [simple]
+
+simple:
+  messages:
+  - ¡sí!
+  - |-
+    📚  _-_en `PPU`, añade este método:_--_
+      *_-_*onLoad(mapper)**:_--_
+        *_-_*->** guarda el parámetro como una propiedad (~this.mapper~)_--_
+  - |-
+    📚  _-_añade al final de `_onPreLine()` y `_onVisibleLine():_--_
+      _-_```javascript if (this.cycle === 260) this.mapper.tick();```_--_
   responses: []
