--- a/src/data/levels/05b_PPU/07_VBlank detection/chat/es.yml
+++ b/src/data/levels/05b_PPU/07_VBlank detection/chat/es.yml
@@ -28,19 +28,19 @@ interrupts:
     📚  _-_y cambia este en `PPU`:_--_
     *_-_*step(onFrame, onInterrupt)**:_--_
       *_-_*->** si ~this.scanline~ es ~-1~:_--_
-        *_-_*->** llama a ~this._onPreLine(onInterrupt)~_--_
+        *_-_*->** llama a ~this._onPreLine()~_--_
       *_-_*->** si ~this.scanline~ es menor a 240:_--_
-        *_-_*->** llama a ~this._onVisibleLine(onInterrupt)~_--_
+        *_-_*->** llama a ~this._onVisibleLine()~_--_
       *_-_*->** si ~this.scanline~ es 241:_--_
         *_-_*->** llama a ~this._onVBlankLine(onInterrupt)~_--_
       *_-_*->** ...resto del código ~step(...)~..._--_
       *_-_*[!]** nota que agregamos un parámetro ~onInterrupt~_--_
   - |-
     📚  _-_ahora, agrega estos métodos:_--_
-    *_-_*_onPreLine(onInterrupt)**:_--_
+    *_-_*_onPreLine()**:_--_
       *_-_*->** si ~this.cycle~ es 1:_--_
         *_-_*->** asigna ~this.registers.ppuStatus.isInVBlankInterval = 0~_--_
-    *_-_*_onVisibleLine(onInterrupt)**:_--_
+    *_-_*_onVisibleLine()**:_--_
       *_-_*[!]** déjalo vacío por ahora_--_
     *_-_*_onVBlankLine(onInterrupt)**:_--_
       *_-_*->** si ~this.cycle~ es 1:_--_
