--- a/src/data/levels/05b_PPU/09_Backgrounds 1-2 - Drawing Name tables/chat/es.yml
+++ b/src/data/levels/05b_PPU/09_Backgrounds 1-2 - Drawing Name tables/chat/es.yml
@@ -22,7 +22,7 @@ finally:
         _-_(¡recuerda importarlo si lo definiste en otro archivo!)_--_
     *_-_*step(...)**:_--_
       *_-_*->** elimina el código de prueba (~<test>...</test>~)_--_
-    *_-_*_onVisibleLine(...)**:_--_
+    *_-_*_onVisibleLine()**:_--_
       *_-_*->** si el ciclo es ~0~, llama a ~backgroundRenderer.renderScanline()~_--_
   - |-
     📚  _-_ahora, en la clase `BackgroundRenderer`, define:_--_
