--- a/src/data/levels/05b_PPU/14_Sprites 2-6 - Evaluation/chat/es.yml
+++ b/src/data/levels/05b_PPU/14_Sprites 2-6 - Evaluation/chat/es.yml
@@ -30,7 +30,7 @@ ok:
             *_-_*->** detiene el bucle_--_
       *_-_*->** devuelve ~sprites~ en orden inverso_--_
   - 📚 _-_además, necesitas reiniciar `spriteOverflow` a 0 en ~scanline=-1; cycle=1~, como lo hiciste anteriormente con ~isInVBlankInterval~_--_
-  - 📚 _-_hazlo en `PPU::_onPreLine(...)`_--_
+  - 📚 _-_hazlo en `PPU::_onPreLine()`_--_
   responses:
   - ¿cómo sé si un sprite debe ser renderizado? [visible]
 
