--- a/src/data/levels/05b_PPU/18_Sprites 6-6 - Sprite-0 hit/chat/en.yml
+++ b/src/data/levels/05b_PPU/18_Sprites 6-6 - Sprite-0 hit/chat/en.yml
@@ -21,5 +21,5 @@ aahh:
     📚  _-_in `SpriteRenderer`, change the ~_render(...)~ method; below ~buffer[x] = ...~, add:_--_
     *_-_*->** if the ~sprite.id~ is 0 AND the background pixel in ~(x, y)~ is opaque:_--_
       *_-_*->** sets ~this.ppu.registers.ppuStatus.sprite0Hit = 1~_--_
-  - 📚  _-_ah, and reset ~sprite0Hit~ in ~PPU::_onPreLine(...)~, just like you did with the other two flags!_--_
+  - 📚  _-_ah, and reset ~sprite0Hit~ in ~PPU::_onPreLine()~, just like you did with the other two flags!_--_
   responses: []
