--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-fast-marquee": "^1.3.5",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
+    "react-image-diff": "^0.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1",
