--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "pixi-filters": "^4.2.0",
     "pixi-lights": "^3.0.0",
     "pixi.js": "^6.3.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.5.0",
