Updating first levels and highlighter stuff

--- a/src/data/levels/01_Getting started/01_Introduction/chat/en.yml
+++ b/src/data/levels/01_Getting started/01_Introduction/chat/en.yml
@@ -21,7 +21,7 @@ forwhat:
   - we are going to build a NEEES emulator, remember?
   responses:
   - (*) first of all, why is it called NEEES? [name]
-  - but I don't know how to build an emulator 😳 [idontknow]
+  - I don't know how to build an emulator 😳 [idontknow]
 
 name:
   messages:
@@ -42,10 +42,6 @@ workingnes:
   - it works just fine, though now it's disassembled and hooked up to a bunch of logic analyzers
   - it belonged to an ancestor of mine
   - he must be turning in his grave after what I did to his poor NEEES 😅
-  - |-
-    look
-    
-    <{neees.jpg;30x30}>
   responses:
   - ...forwhat
 
