--- a/src/data/levels/01_Getting started/03_Architecture/chat/en.yml
+++ b/src/data/levels/01_Getting started/03_Architecture/chat/en.yml
@@ -4,7 +4,7 @@ main:
     set((m) => m.chat.winOnEnd = true);
     {{Right}}.load("architecture.png");
   messages:
-  - so... apparently, this thing has 3 main components that work pretty much independently from each other
+  - so... this thing has 3 main components that work pretty much independently from each other
   - "these are: 🧠  CPU, 🖥️  PPU, and 🔊  APU"
   - "in order to play games, you must connect two pieces of hardware:"
   - 💾  a cartridge (the game itself!)
@@ -19,7 +19,7 @@ cpu:
   run: |
     {{Right}}.load("architecture.png");
   messages:
-  - it's the Central Processing Unit
+  - it's the <Central Processing Unit>
   - reads a game's code and executes its instructions
   - like the one in your computer, but <several> times slower
   - it has access to a 2 KiB bank of WRAM (Work RAM)
@@ -40,7 +40,7 @@ ppu:
   run: |
     {{Right}}.load("architecture.png");
   messages:
-  - it's the Picture Processing Unit
+  - it's the <Picture Processing Unit>
   - draws graphics by putting pixels on the screen
   - in the magnificent resolution of 256x240!
   - and it has access to a 2 KiB bank of VRAM (Video RAM)
@@ -61,7 +61,7 @@ apu:
   run: |
     {{Right}}.load("architecture.png");
   messages:
-  - it's the Audio Processing Unit
+  - it's the <Audio Processing Unit>
   - handles sound, producing audio waves
   - like square waves, triangle waves, noise, and even custom samples!
   - it outputs a stream of 44100 samples per second
