--- a/src/data/levels/01_Getting started/03_Architecture/chat/es.yml
+++ b/src/data/levels/01_Getting started/03_Architecture/chat/es.yml
@@ -4,7 +4,7 @@ main:
     set((m) => m.chat.winOnEnd = true);
     {{Right}}.load("architecture.png");
   messages:
-  - bueno, aparentemente, esta cosa tiene 3 componentes principales, bastante independientes uno del otro
+  - bueno, esta cosa tiene 3 componentes principales, bastante independientes uno del otro
   - "estos son: 🧠  CPU, 🖥️  PPU y 🔊  APU"
   - "para poder jugar juegos, tienes que conectar dos piezas de hardware:"
   - 💾  un cartucho (¡el juego mismo!)
@@ -19,7 +19,7 @@ cpu:
   run: |
     {{Right}}.load("architecture.png");
   messages:
-  - es la Unidad Central de Procesamiento
+  - es la <Unidad Central de Procesamiento>
   - lee el código de los juegos y ejecuta sus instrucciones
   - como la de tu computadora, pero <muchas> veces más lenta
   - tiene acceso a un banco de 2 KiB de WRAM (Work RAM)
@@ -40,7 +40,7 @@ ppu:
   run: |
     {{Right}}.load("architecture.png");
   messages:
-  - es la Unidad de Procesamiento de Imagen
+  - es la <Unidad de Procesamiento de Imagen>
   - dibuja gráficos poniendo píxeles en la pantalla
   - ¡en la magnífica resolución de 256x240!
   - y tiene acceso a un banco de 2 KiB de VRAM (Video RAM)
@@ -61,7 +61,7 @@ apu:
   run: |
     {{Right}}.load("architecture.png");
   messages:
-  - es la Unidad de Procesamiento de Audio
+  - es la <Unidad de Procesamiento de Audio>
   - maneja el sonido, produciendo ondas de audio
   - como ondas cuadradas, triangulares, ruido e incluso muestras personalizadas
   - emite un stream de 44100 muestras por segundo
